# build_production_system

./: .gitignore  README.md  TECH_STACK.md  deploy.sh  docker-compose.prod.yml  docker-compose.yaml  docker_infrastructure.md
backend/: Dockerfile  debug_milvus.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routers/: chat.py
backend/app/core/: config.py  monitoring.py  tracing.py
backend/app/db/: milvus.py
backend/app/engine/: graph.py
backend/app/schemas/: chat.py
backend/scripts/: ingest.py
deploy/grafana/provisioning/datasources/: datasource.yaml
deploy/otel-collector/: config.yaml
deploy/prometheus/: prometheus.yml
deploy/tempo/: tempo.yml
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: actions.ts  page.tsx
volumes/etcd/member/snap/: db
volumes/minio/.minio.sys/: format.json
volumes/minio/.minio.sys/tmp/.trash/: 2d60c896-88cc-4947-99dc-52c806b592c7
